# collective.translators

./: .gitignore  .meta.toml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test-matrix.yml
src/collective/translators/: __init__.py  configure.zcml  dependencies.zcml  interfaces.py  profiles.zcml
src/collective/translators/aws/: utility.py
src/collective/translators/chatgpt/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/deepl/: controlpanel.py  utility.py
src/collective/translators/deepseek/: utility.py
src/collective/translators/google/: configure.zcml  controlpanel.py  utility.py
src/collective/translators/libretranslate/: controlpanel.py  utility.py
src/collective/translators/locales/: collective.translators.pot  update.sh
src/collective/translators/locales/en/LC_MESSAGES/: collective.translators.po
src/collective/translators/locales/it/LC_MESSAGES/: collective.translators.po
src/collective/translators/ollama/: utility.py
src/collective/translators/profiles/default/: controlpanel.xml
src/collective/translators/profiles/default/registry/: aws.xml  chatgpt.xml  deepl.xml  deepseek.xml  google.xml  libretranslate.xml
tests/: conftest.py
