[project]
name = "collective.translators"
dynamic = ["version"]
description = "Pluggable external translation utilities for Plone"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Mauro Amico", email = "mauro.amico@gmail.com" },
  { name = "Mikel Larreategi", email = "mlarreategi@codesyntax.com" },
]
keywords = ["CMS", "Plone", "Python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Plone",
  "Framework :: Plone :: 6.1",
  "Framework :: Plone :: Addon",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "Products.CMFPlone",
  "plone.api",
  "plone.app.multilingual",
  "requests",
]

[project.optional-dependencies]
test = [
  "horse-with-no-namespace",
  "plone.app.testing",
  "pytest",
  "pytest-cov",
  "pytest-plone>=0.5.0",
]
release = [
  "zest.releaser[recommended]",
  "zestreleaser.towncrier",
  "zest.pocompile",
]
aws = ["boto3"]
deepseek = ["openai"]
deepl = ["deepl"]
ollama = ["ollama"]


[project.urls]
Homepage = "https://github.com/collective/collective.translators"
PyPI = "https://pypi.org/project/collective.translators"
Source = "https://github.com/collective/collective.translators"
Tracker = "https://github.com/collective/collective.translators/issues"

[project.entry-points."plone.autoinclude.plugin"]
target = "plone"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/collective/translators/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/collective/translators"]

[tool.towncrier]
directory = "news/"
filename = "CHANGES.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  towncrier_extra_lines = """
#  extra_configuration
#  """
##

[tool.isort]
profile = "plone"

##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  isort_extra_lines = """
#  extra_configuration
#  """
##

[tool.black]
target-version = ["py38"]

##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  black_extra_lines = """
#  extra_configuration
#  """
##

[tool.codespell]
ignore-words-list = "discreet,vew"
skip = "*.po,*.min.js"
##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  codespell_ignores = "foo,bar"
#  codespell_skip = "*.po,*.map,package-lock.json"
##

[tool.dependencychecker]
Zope = [
  # Zope own provided namespaces
  'App',
  'OFS',
  'Products.Five',
  'Products.OFSP',
  'Products.PageTemplates',
  'Products.SiteAccess',
  'Shared',
  'Testing',
  'ZPublisher',
  'ZTUtils',
  'Zope2',
  'webdav',
  'zmi',
  # ExtensionClass own provided namespaces
  'ExtensionClass',
  'ComputedAttribute',
  'MethodObject',
  # Zope dependencies
  'AccessControl',
  'Acquisition',
  'AuthEncoding',
  'beautifulsoup4',
  'BTrees',
  'cffi',
  'Chameleon',
  'DateTime',
  'DocumentTemplate',
  'MultiMapping',
  'multipart',
  'PasteDeploy',
  'Persistence',
  'persistent',
  'pycparser',
  'python-gettext',
  'pytz',
  'RestrictedPython',
  'roman',
  'soupsieve',
  'transaction',
  'waitress',
  'WebOb',
  'WebTest',
  'WSGIProxy2',
  'z3c.pt',
  'zc.lockfile',
  'ZConfig',
  'zExceptions',
  'ZODB',
  'zodbpickle',
  'zope.annotation',
  'zope.browser',
  'zope.browsermenu',
  'zope.browserpage',
  'zope.browserresource',
  'zope.cachedescriptors',
  'zope.component',
  'zope.configuration',
  'zope.container',
  'zope.contentprovider',
  'zope.contenttype',
  'zope.datetime',
  'zope.deferredimport',
  'zope.deprecation',
  'zope.dottedname',
  'zope.event',
  'zope.exceptions',
  'zope.filerepresentation',
  'zope.globalrequest',
  'zope.hookable',
  'zope.i18n',
  'zope.i18nmessageid',
  'zope.interface',
  'zope.lifecycleevent',
  'zope.location',
  'zope.pagetemplate',
  'zope.processlifetime',
  'zope.proxy',
  'zope.ptresource',
  'zope.publisher',
  'zope.schema',
  'zope.security',
  'zope.sequencesort',
  'zope.site',
  'zope.size',
  'zope.structuredtext',
  'zope.tal',
  'zope.tales',
  'zope.testbrowser',
  'zope.testing',
  'zope.traversing',
  'zope.viewlet',
]
'Products.CMFCore' = [
  'docutils',
  'five.localsitemanager',
  'Missing',
  'Products.BTreeFolder2',
  'Products.GenericSetup',
  'Products.MailHost',
  'Products.PythonScripts',
  'Products.StandardCacheManagers',
  'Products.ZCatalog',
  'Record',
  'zope.sendmail',
  'Zope',
]
'plone.base' = [
  'plone.batching',
  'plone.registry',
  'plone.schema',
  'plone.z3cform',
  'Products.CMFCore',
  'Products.CMFDynamicViewFTI',
]
python-dateutil = ['dateutil']
pytest-plone = ['pytest', 'plone.testing', 'plone.app.testing']
ignore-packages = [
  'plone.app.iterate',
  'plone.app.upgrade',
  'plone.volto',
  'zestreleaser.towncrier',
  'zest.releaser',
  'pytest-cov',
]

##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  dependencies_ignores = "['zestreleaser.towncrier']"
#  dependencies_mappings = [
#    "gitpython = ['git']",
#    "pygithub = ['github']",
#  ]
##

[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".flake8",
  ".meta.toml",
  ".pre-commit-config.yaml",
  "dependabot.yml",
  "mx.ini",
  "tox.ini",

]

##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  check_manifest_ignores = """
#      "*.map.js",
#      "*.pyc",
#  """
#  check_manifest_extra_lines = """
#  ignore-bad-ideas = [
#      "some/test/file/PKG-INFO",
#  ]
#  """
##


##
# Add extra configuration options in .meta.toml:
#  [pyproject]
#  extra_lines = """
#  _your own configuration lines_
#  """
##

[tool.zest-releaser]
python-file-with-version = "src/collective/translators/__init__.py"
