[metadata]
name = collective.translators
version = 1.0.0a0
description = Pluggable external translation utilities for Plone
long_description = file: README.md
long_description_content_type = text/markdown
author = Mauro Amico
author_email = mauro.amico@gmail.com
url = https://github.com/collective/collective.translators
project_urls =
    PyPI = https://pypi.org/project/collective.translators
    Source = https://github.com/collective/collective.translators
    Tracker = https://github.com/collective/collective.translators/issues
license = GPL version 2
keywords = Python Plone CMS
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Addon
    Framework :: Plone :: 6.0
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
python_requires = >=3.10,<3.14
